--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 				<p>	
 					Luego de 8 años, me casé con mi mejor amigo y el amor de mi vida. Fue una boda muy especial, cantamos a duo, hicimos nuestros propios pactos y nos olvidamos llevar la maleta al hotel.
 				</p>
-				<img class="imagen" src="img/boda.png" alt="">
+				<img class="imagen" src="img/Boda.png" alt="">
 			</li>
 
 			<li data-date="10/12/2014">
