--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 				<p>	
 					Me convertí en mamá, fue el día mas feliz de mi vida sin lugar a dudas,tener una vida fruto del amor que tengo con mi amado esposo es un regalo de Dios. 
 				</p>
-				<img class="imagen" src="img/_SAM2714.JPG" alt="">
+				<img class="imagen" src="img/jaynie.jpg" alt="">
 			</li>
 
 			<li data-date="03/03/2015">
